# wave

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
examples/cpp_wrapper/: main.cpp
examples/read_wav/: main.c
examples/rewrite_wav/: main.c
examples/write_empty_wav/: main.c
include/wave/: wave.h  wave.hpp
src/: wave.c
